--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,29 +2,33 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
-  <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
-
+  <title {% if page.lang or site.lang %}lang="{{ page.lang | default: site.lang }}"{% endif %}>{{ page.title | default: site.title | escape }}</title>
+  <meta name="description" {% if page.lang or site.lang %}lang="{{ page.lang | default: site.lang }}"{% endif %} content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
+  {%- if page.keywords -%}
+  <meta name="keywords" {% if page.lang %}lang="{{ page.lang }}"{% endif %} content="{{ page.keywords }}">
+  {%- endif -%}
+  {%- if site.keywords -%}
+  <meta name="keywords" {% if site.lang %}lang="{{ site.lang }}"{% endif %} content="{{ site.keywords }}">
+  {%- endif -%}        
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
-  {% if jekyll.environment == 'production' and site.google_analytics %}
+  {%- if jekyll.environment == 'production' and site.google_analytics -%}
   {% include google-analytics.html %}
-  {% endif %}
-  {% if page.include_full_url %}
-  {% assign base_url = page.include_full_url | absolute_url | split: "/" | pop | push: "" | join: "/" %}
+  {%- endif -%}
+  {%- if page.include_full_url -%}
+  {%- assign base_url = page.include_full_url | absolute_url | split: "/" | pop | push: "" | join: "/" -%}
   <base href="{{ base_url }}" />
-  {% capture head_html %}{% include_relative {{ page.include_full_url }} %}{% endcapture %}
-  {% assign head_parts = head_html | downcase | split: "<head>" %}
-  {% assign part0_len = head_parts[0] | size | plus: 6 %}
-  {% assign part1_len = head_parts[1] | size %}
-  {% assign head_html = head_html | slice: part0_len, part1_len %}
-  {% assign head_parts = head_html | downcase | split: "</head>" %}
-  {% assign part0_len = head_parts[0] | size %}
-  {% assign head_html = head_html | slice: 0, part0_len %}
+  {%- capture head_html %}{% include_relative {{ page.include_full_url }} %}{% endcapture -%}
+  {%- assign head_parts = head_html | downcase | split: "<head>" -%}
+  {%- assign part0_len = head_parts[0] | size | plus: 6 -%}
+  {%- assign part1_len = head_parts[1] | size -%}
+  {%- assign head_html = head_html | slice: part0_len, part1_len -%}
+  {%- assign head_parts = head_html | downcase | split: "</head>" -%}
+  {%- assign part0_len = head_parts[0] | size -%}
+  {%- assign head_html = head_html | slice: 0, part0_len -%}
   {{ head_html }}
-  {% endif %}
-  {% seo %}
+  {%- endif -%}
+  {% seo title=false %}
 </head>
