--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
+  {% comment %}<link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">{% endcomment %}
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
